tests/parsing/icnf/errors/005_clause_unclosed_1.expected
File "tests/parsing/icnf/errors/005_clause_unclosed_1.icnf", line 2, character 4-5:
2 | 1 0 0
        ^
Error while parsing a clause, read the integer '0',
      but expected a newline character.
